--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -744,7 +744,7 @@
                                  
                                     
                                     <div class="mb-0 mt-5">
-                                      <div class="border border-dark rounded-3  pb-0 " >
+                                      <div class="border border-secondary-subtle rounded-3  pb-0 " >
                                           <table class="table  text-center table-border-bottom-0 pb-0 mb-0" >
                                               <thead class="">
                                                   <tr>
@@ -762,11 +762,11 @@
                                       </div>
                                       
                                   </div>
-                                  <div class=" todays-call border border-dark rounded-3 mt-5 pb-0 " >
+                                  <div class=" todays-call border border-secondary-subtle rounded-3 mt-5 pb-0 " >
                                     <table class="table  text-center table-border-bottom-0 pb-0 mb-0" >
                                       <tbody>
                                         <tr>
-                                          <td class="fw-bolder text-dark" style="font-size: 12px;">Todays Calls:</td>
+                                          <td class="" style="font-size: 12px;">Todays Calls:</td>
                                         </tr>
                                         <tr>
                                           <td><div id="callCount"></div></td>
@@ -808,8 +808,8 @@
 
 
                         </div>
-                        <div class="d-flex justify-content-center mt-5">
-                          <span  style="font-size: 8px;">NAUTILUS SHIPPING</span>
+                        <div class="d-flex justify-content-end mt-5 mb-3">
+                          <span  style="font-size: 12px;">NAUTILUS SHIPPING</span>
 
                       </div>
                     
@@ -852,9 +852,7 @@
             <!-- / Content -->
 
             <!-- Footer -->
-             <footer class="footer mt-auto py-3 bg-footer-theme">
-      
-    </footer>
+             
             <!-- / Footer -->
 
             <div class="content-backdrop fade"></div>
