--- a/views/public/html/queries.html
+++ b/views/public/html/queries.html
@@ -629,7 +629,7 @@
     const fetchQueries = async () => {
       try {
         const token = localStorage.getItem('token');
-        const response = await axios.get('  https://nemonode.ivistaz.co/others/query-fetch', {
+        const response = await axios.get('https://nemo.ivistaz.co/others/query-fetch', {
           headers: {
             'Authorization': token
           }
@@ -685,7 +685,7 @@
       const created_by = decodedToken.userId;
       try {
         const token = localStorage.getItem('token');
-        await axios.post('  https://nemonode.ivistaz.co/others/query', {
+        await axios.post('https://nemo.ivistaz.co/others/query', {
           categories,
           description,
           status,
@@ -741,7 +741,7 @@
 
       try {
         const token = localStorage.getItem('token');
-        await axios.put(`  https://nemonode.ivistaz.co/others/query/${queryId}`, {
+        await axios.put(`https://nemo.ivistaz.co/others/query/${queryId}`, {
           categories: editCategories,
           description: editDescription,
           status: editStatus,
