--- a/views/public/html/availableCandidates.html
+++ b/views/public/html/availableCandidates.html
@@ -573,7 +573,7 @@
 async function populateCandidatesTable() {
     try {
         const token = localStorage.getItem('token');
-        const response = await axios.get('  https://nemonode.ivistaz.co/candidate/avbreport');
+        const response = await axios.get('https://nemo.ivistaz.co/candidate/avbreport');
         const responseData = response.data;
         const candidates = responseData.candidates;
 
