--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -656,7 +656,7 @@
                   error.style.display = 'none';
                   tableContainer.style.display = 'none';
         
-                  axios.get('https://nemonode.ivistaz.co/candidate/birthday', {
+                  axios.get('https://nemo.ivistaz.co/candidate/birthday', {
                       params: { date },
                       headers: { "Authorization": token }
                   })
