--- a/views/public/html/reportsAll.html
+++ b/views/public/html/reportsAll.html
@@ -74,7 +74,7 @@
         document.getElementById('exportCandidatesButton').addEventListener('click', async () => {
             if (permission) {
                 try {
-                    const endpoint = 'https://nemonode.ivistaz.co/candidate/view-candidate';
+                    const endpoint = 'https://nemo.ivistaz.co/candidate/view-candidate';
                     const token = localStorage.getItem('token');
                     const response = await axios.get(endpoint, { headers: { "Authorization": token } });
     
@@ -101,7 +101,7 @@
     
         const handleGenerateAllCandidatesReport = async () => {
             try {
-                const endpoint = 'https://nemonode.ivistaz.co/candidate/view-candidate';
+                const endpoint = 'https://nemo.ivistaz.co/candidate/view-candidate';
                 const token = localStorage.getItem('token');
                 const response = await axios.get(endpoint, { headers: { "Authorization": token } });
     
