--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -680,6 +680,9 @@
    <span class="align-middle">Log Out</span>
 </a>
                     </span>
+                    <span>
+                      
+                    </span>
                   </ul>
                 </span>
                 <!--/ User -->
