Live nemo site design done

--- a/views/public/html/add-user.html
+++ b/views/public/html/add-user.html
@@ -64,6 +64,7 @@
                 <h5 class="modal-title" id="logoutModalLabel">NSNEMO</h5>
             </div>
             <div class="modal-body text-center mb-4">
+              <img src="../../public/assets/img/illustrations/undraw_cabin_hkfr.svg" style="width: 50px;height: auto;"/>
                 <p id="logoutMessage">Logging you out...</p>
                 <div class="spinner-border text-danger" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -580,17 +581,15 @@
                                       <th class="col-1" style="font-size: 8px;">Sno</th>
                                       <th style="font-size: 8px;">ID</th>
                                       <th style="font-size: 8px;">First Name</th>
-                                      <th style="font-size: 8px;">Last Name</th>
                                       <th style="font-size: 8px;">Email</th>
                                       <th style="font-size: 8px;">Password</th>
                                       <th style="font-size: 8px;">Phone</th>
                                       <th style="font-size: 8px;">Group</th>
-                                      <th style="font-size: 8px;">Vendor</th>
-                                      <th style="font-size: 8px;">Client</th>
-                                      <th style="font-size: 8px;">Created By</th>
+                                     
+                                      <th style="font-size: 8px;">Created&nbsp;By</th>
                                       <th style="font-size: 8px;">Master</th>
                                       <th style="font-size: 8px;">Reports</th>
-                                      <th style="font-size: 8px;">Reports All</th>
+                                      <th style="font-size: 8px;">Reports&nbsp;All</th>
                                       <th style="font-size: 8px;">Delete</th>
                                       <th style="font-size: 8px;">Staff</th>
 
