--- a/views/public/html/availableCandidates.html
+++ b/views/public/html/availableCandidates.html
@@ -533,9 +533,10 @@
                   </ul>
                 </div>
               </nav>
-              <div class="p-5">
+              <div class="p-5 pt-3">
+                <a href="./indexpage.html" class="float-end   btn btn-primary">  Back to Dashboard</a>
+
     <h2>Available Candidates - Overall</h2>
-    <a href="./indexpage.html" class="float-end me-5 text-decoration-none mt-3 btn btn-primary"> >> Back to Dashboard</a>
     
     <div class="border p-5 pt-4 pb-2">
         <h5 class="text-primary">Candidates : Rank</h5> - click the buttons to filter candidates based on rank
