--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -64,6 +64,7 @@
                 <h5 class="modal-title" id="logoutModalLabel">NSNEMO</h5>
             </div>
             <div class="modal-body text-center mb-4">
+              <img src="../../public/assets/img/illustrations/undraw_cabin_hkfr.svg" style="width: 50px;height: auto;"/>
                 <p id="logoutMessage">Logging you out...</p>
                 <div class="spinner-border text-danger" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -457,9 +458,9 @@
                       <div data-i18n="Account">Manage</div>
                     </a>
                   </li>
-                  <li class="menu-item">
+                 <li class="menu-item">
                     <a href="add-vendor.html" class="menu-link">
-                      <div data-i18n="Account">Add</div>
+                      <div data-i18n="Account">Add Vendor User</div>
                     </a>
                   </li>
                 </ul></li>
@@ -567,10 +568,13 @@
 
           <!-- Content wrapper -->
           <div class="container-fluid">
+ <a href="./indexpage.html" class="float-end btn btn-primary mt-3">Back To Dashboard</a>
+
             <div class="container p-5">
-                <h3 class=" text-primary line-">Birthday Reminder</h3>
-                <p style="font-size: 12px;">- Upcoming birthdays for a week is displayed below</p>
+                <h3 class=" text-primary pb-0 mb-2">Birthday Reminder</h3>
+                <p style="font-size: 12px;" class="mt-0 pt-0">- Upcoming birthdays for a week is displayed below</p>
                   <div class="col">
+                    
                       <div class=" d-flex align-items-center justify-content-start">
                           <label for="date" class="m-0">Select Date:</label>
                           <input type="date" id="date" class="form-control ms-2 me-2" style="width: 200px;">
