--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -121,6 +121,7 @@
                 <h5 class="modal-title" id="logoutModalLabel">NSNEMO</h5>
             </div>
             <div class="modal-body text-center mb-4">
+              <img src="../../public/assets/img/illustrations/undraw_cabin_hkfr.svg" style="width: 50px;height: auto;"/>
                 <p id="logoutMessage">Logging you out...</p>
                 <div class="spinner-border text-danger" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -215,7 +216,6 @@
            
             
            
-           <okay>
 
             <li class="menu-header small text-uppercase">
               <span class="menu-header-text">Settings</span>
@@ -452,6 +452,18 @@
                 </span>
               </ul>
             </span>
+              </li>
+              </li>
+            </li>
+            </li>
+            </li>
+            </li>
+            </li>
+            </li>
+            </li>
+            </li>
+            </li>
+            </li>
 
             <!-- <li class="menu-header small text-uppercase" id="vendorManagement" style="display: none;">
               <span class="menu-header-text">Vendor Management</span>
@@ -780,7 +792,7 @@
                                   
                                 </div>
                                   
-                              
+                              <img src="../../public/assets/img/illustrations/undraw_certificate_re_yadi.svg" style="width: 50px;height: auto;" />
                                 
                             </div>  
                             <div class="card p-5 pb-0 mt-3 w-100">
