--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -63,6 +63,7 @@
                   <h5 class="modal-title text-dark" id="welcomeModalLabel">NSNEMO</h5>
               </div>
               <div class="modal-body text-center mb-4">
+                <img src="../../public/assets/img/illustrations/undraw_container_ship_re_alm4.svg" style="height: auto;width: 100px;">
                   <p id="welcomeMessage" class="fs-4"> Logged in as : <span id="welcomeUsername" class="text-primary fw-bolder"></span></p>
                   <div class="spinner-border text-success" role="status">
                   <span class="visually-hidden">Loading...</span>  
