--- a/views/public/html/reminder.html
+++ b/views/public/html/reminder.html
@@ -64,6 +64,7 @@
                 <h5 class="modal-title" id="logoutModalLabel">NSNEMO</h5>
             </div>
             <div class="modal-body text-center mb-4">
+              <img src="../../public/assets/img/illustrations/undraw_cabin_hkfr.svg" style="width: 50px;height: auto;"/>
                 <p id="logoutMessage">Logging you out...</p>
                 <div class="spinner-border text-danger" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -454,9 +455,9 @@
                       <div data-i18n="Account">Manage</div>
                     </a>
                   </li>
-                  <li class="menu-item">
+                 <li class="menu-item">
                     <a href="add-vendor.html" class="menu-link">
-                      <div data-i18n="Account">Add</div>
+                      <div data-i18n="Account">Add Vendor User</div>
                     </a>
                   </li>
                 </ul></li>
@@ -564,7 +565,10 @@
 
           <!-- Content wrapper -->
           <div class="container">
+            <a href="./indexpage.html" class="float-end btn btn-primary mt-3">Back to Dashboard</a>
+
             <div class="row mt-5">
+
                 <div class="col">
                     <h2 class="text-center">Discussion Reminders</h2>
                 </div>
