--- a/views/public/html/add-company.html
+++ b/views/public/html/add-company.html
@@ -64,6 +64,7 @@
                 <h5 class="modal-title" id="logoutModalLabel">NSNEMO</h5>
             </div>
             <div class="modal-body text-center mb-4">
+              <img src="../../public/assets/img/illustrations/undraw_cabin_hkfr.svg" style="width: 50px;height: auto;"/>
                 <p id="logoutMessage">Logging you out...</p>
                 <div class="spinner-border text-danger" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -452,9 +453,9 @@
                       <div data-i18n="Account">Manage</div>
                     </a>
                   </li>
-                  <li class="menu-item">
+                 <li class="menu-item">
                     <a href="add-vendor.html" class="menu-link">
-                      <div data-i18n="Account">Add</div>
+                      <div data-i18n="Account">Add Vendor User</div>
                     </a>
                   </li>
                 </ul></li>
@@ -576,7 +577,7 @@
           <!-- / Navbar -->
 
           <!-- Content wrapper -->
-          <div class="container-fluid">
+          <div class="container-fluid" id="settingsContainer">
 
             
 
@@ -663,7 +664,25 @@
                       </form>
                   </div>
               </div>
-              
+              <div class="position-absolute p-3" style="z-index: 11">
+    <div id="successToast" class="toast align-items-center text-white bg-success" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="2000">
+        <div class="d-flex">
+            <div class="toast-body">
+                Company Added Successfully!
+            </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+    </div>
+    <div id="errorToast" class="toast align-items-center text-white bg-danger" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="2000">
+        <div class="d-flex">
+            <div class="toast-body">
+                Error: Company could not be added.
+            </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+    </div>
+</div>
+
               
               
               
@@ -672,7 +691,12 @@
             </div>
           </div>
           
-            
+            <div class="mt-5 p-5 text-center" id="settingsCard" style="display: none;">
+              <h4>
+                Permission Required! Contact Admin.
+                  </h4>
+                  <p>For more details regarding permission visit <strong class="text-primary">My Profile</strong></p>
+            </div>
                     <!-- /Account -->
                       <!-- / Content -->
 
