--- a/views/public/html/queries.html
+++ b/views/public/html/queries.html
@@ -31,6 +31,7 @@
                 <h5 class="modal-title" id="logoutModalLabel">NSNEMO</h5>
             </div>
             <div class="modal-body text-center mb-4">
+              <img src="../../public/assets/img/illustrations/undraw_cabin_hkfr.svg" style="width: 50px;height: auto;"/>
                 <p id="logoutMessage">Logging you out...</p>
                 <div class="spinner-border text-danger" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -414,9 +415,9 @@
                       <div data-i18n="Account">Manage</div>
                     </a>
                   </li>
-                  <li class="menu-item">
+                 <li class="menu-item">
                     <a href="add-vendor.html" class="menu-link">
-                      <div data-i18n="Account">Add</div>
+                      <div data-i18n="Account">Add Vendor User</div>
                     </a>
                   </li>
                 </ul></li>
@@ -436,9 +437,9 @@
                       <div data-i18n="Account">Manage</div>
                     </a>
                   </li>
-                  <li class="menu-item">
+                 <li class="menu-item">
                     <a href="add-vendor.html" class="menu-link">
-                      <div data-i18n="Account">Add</div>
+                      <div data-i18n="Account">Add Vendor User</div>
                     </a>
                   </li>
                 </ul></li>
@@ -543,7 +544,9 @@
               </ul>
             </div>
           </nav>
-  <div class="p-5">
+  <div class="p-5 pt-3">
+    <a class=" btn btn-primary float-end" href="./indexpage.html">Back to Dashboard</a>
+
     <div>
       <h2>All Queries</h2>
 
@@ -616,7 +619,6 @@
         </form>
       </div>
     </div>
-    <a class="mt-3 btn btn-primary" href="./indexpage.html">Back Home</a>
 
   </div>
 
