--- a/views/public/html/reminder-document.html
+++ b/views/public/html/reminder-document.html
@@ -64,6 +64,7 @@
                 <h5 class="modal-title" id="logoutModalLabel">NSNEMO</h5>
             </div>
             <div class="modal-body text-center mb-4">
+              <img src="../../public/assets/img/illustrations/undraw_cabin_hkfr.svg" style="width: 50px;height: auto;"/>
                 <p id="logoutMessage">Logging you out...</p>
                 <div class="spinner-border text-danger" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -457,9 +458,9 @@
                       <div data-i18n="Account">Manage</div>
                     </a>
                   </li>
-                  <li class="menu-item">
+                 <li class="menu-item">
                     <a href="add-vendor.html" class="menu-link">
-                      <div data-i18n="Account">Add</div>
+                      <div data-i18n="Account">Add Vendor User</div>
                     </a>
                   </li>
                 </ul></li>
@@ -570,6 +571,8 @@
 
           <!-- Content wrapper -->
           <div class="container-fluid">
+            <a href='./indexpage.html' class="btn btn-primary float-end mt-3" >  Back to Dashboard</a>
+
             <div class="p-3">
                 <h4>Documents with Approaching Expiry Dates</h4>
                 <div id="loader" class="text-center" style="display: none;">
@@ -578,6 +581,7 @@
                 <div id="error" class="text-center text-danger" style="display: none;">
                     Error: Failed to fetch expiry dates.
                 </div>
+
                 <form id="submitButton" class="d-flex justify-content-start">
                     <input type="date" id="dateInput" class="form-control w-25">
                     <button type="submit" class="btn btn-primary ms-3">Filter Expiry Date</button>
@@ -598,7 +602,6 @@
                     </thead>
                     <tbody></tbody>
                 </table>
-                <a href='./indexpage.html'> > Back Home</a>
             </div>
         
             <!-- Bootstrap JS and Axios -->
