--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -58,6 +58,7 @@
                 <h5 class="modal-title" id="logoutModalLabel">NSNEMO</h5>
             </div>
             <div class="modal-body text-center mb-4">
+              <img src="../../public/assets/img/illustrations/undraw_cabin_hkfr.svg" style="width: 50px;height: auto;"/>
                 <p id="logoutMessage">Logging you out...</p>
                 <div class="spinner-border text-danger" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -454,9 +455,9 @@
                       <div data-i18n="Account">Manage</div>
                     </a>
                   </li>
-                  <li class="menu-item">
+                 <li class="menu-item">
                     <a href="add-vendor.html" class="menu-link">
-                      <div data-i18n="Account">Add</div>
+                      <div data-i18n="Account">Add Vendor User</div>
                     </a>
                   </li>
                 </ul></li>
