Live nemo site bugs fixed

--- a/views/public/html/profile.html
+++ b/views/public/html/profile.html
@@ -677,7 +677,10 @@
         <div class="">
             <div class="">
                 <div class="dashboard-section">
-                    <h4 class="bg-success text-white">User Information <img src="../../public/assets/img/illustrations/girl-doing-yoga-light.png" style="width: 50px;height: auto; margin-left: 820px;" /></h4>
+                  <div class=" d-flex justify-content-between  align-items-center">
+
+                    <h4 class="bg-success text-white w-100">User Information <img src="../../public/assets/img/illustrations/girl-doing-yoga-light.png" style="width: 50px;height: auto;" class="float-end"/></h4>
+                  </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>User ID:</strong> <span id="user-id"></span></li>
                         <li class="list-group-item"><strong>User Name:</strong> <span id="user-name"></span></li>
@@ -688,7 +691,9 @@
             </div>
             <div class="">
                 <div class="dashboard-section">
-                    <h4 class="bg-primary text-white">Permissions<img src="../../public/assets/img/illustrations/man-with-laptop-light.png" style="width: 50px;height: auto; margin-left: 875px;" /></h4>
+                  <div class=" d-flex justify-content-between  align-items-center">
+                    <h4 class="bg-primary text-white w-100">Permissions<img src="../../public/assets/img/illustrations/man-with-laptop-light.png" style="width: 50px;height: auto;" class="float-end" /></h4>
+                    </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Read Only:</strong> <span id="read-only"></span></li>
                         <li class="list-group-item"><strong>Write:</strong> <span id="write"></span></li>
@@ -703,15 +708,25 @@
                     </ul>
                 </div>
             </div>
-            <div class="">
-                <div class="dashboard-section">
-                    <h4 class="bg-warning text-white">Other Information<img src="../../public/assets/img/illustrations/page-misc-error-light.png" style="width: 50px;height: auto; margin-left: 820px;" /></h4>
-                    <ul class="list-group">
-                        <!-- <li class="list-group-item"><strong>Master Create:</strong> <span id="master-create"></span></li> -->
-                        <li class="list-group-item"><strong>Disable User:</strong> <span id="disable-user"></span></li>
-                    </ul>
-                </div>
-            </div>
+           
+              
+                  <div class="dashboard-section">
+                      
+                          <div class=" d-flex justify-content-between  align-items-center">
+
+                              <h4 class="bg-warning text-white w-100 ">Other Information <img src="../../public/assets/img/illustrations/page-misc-error-light.png" style="width: 50px;height: auto;" class="float-end" />
+                              </h4>
+
+                          </div>
+               
+                      <ul class="list-group">
+                          <!-- <li class="list-group-item"><strong>Master Create:</strong> <span id="master-create"></span></li> -->
+                          <li class="list-group-item"><strong>Disable User:</strong> <span id="disable-user"></span></li>
+                      </ul>
+                  </div>
+             
+          
+          
             
         </div>
             
