--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -1390,7 +1390,7 @@
                 </form>
                 <div class="card p-3 mb-3 mt-3"><h4 class="text-primary">Document Renewals</h4>
                 <!-- Table to display candidates due for renewal -->
-                <button id="exportDocumentCandidates" class="btn btn-light text-success">Export to Excel</button>
+                <button id="exportDocumentCandidates" class="btn btn-light text-success" style="display: none;">Export to Excel</button>
 
                 <table class="table table-bordered text-center">
                     <thead>
@@ -1406,7 +1406,7 @@
                 </table>
             </div>
             <div class="card p-3"><h4 class="text-primary">Medical Renewals</h4>
-                <button id="exportMedicalCandidates" class="btn btn-light text-success">Export to Excel</button>
+                <button id="exportMedicalCandidates" class="btn btn-light text-success" style="display: none;">Export to Excel</button>
 
                 <table class="table table-bordered text-center">
                     <thead>
