--- a/views/public/html/candidate-indexpage.html
+++ b/views/public/html/candidate-indexpage.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | Nsnemo</title>
+  <title>Candidate Dashboard | Nsnemo</title>
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="../assets/img/favicon/favicon.ico" />
 
@@ -73,7 +73,7 @@
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
           <div class="app-brand demo">
-            <a href="indexpage.html" class="app-brand-link">
+            <a href="candidate-indexpage.html" class="app-brand-link">
               <span class="app-brand-logo demo">
                 <svg
                   width="25"
@@ -234,21 +234,7 @@
 
             <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
               <!-- Search -->
-              <div class="navbar-nav align-items-center">
-
-                <div class="nav-item d-flex align-items-center">
-                  <button class="btn btn-light border-0 m-0 p-0 " id="search_btn"> <i class="bx bx-search fs-4 lh-0"></i></button>
-
-                  <input
-                    type="text"
-                    class="form-control border-0 shadow-none"
-                    placeholder="Search..."
-                    aria-label="Search..."
-                    id="search_input"
-                  />
-                </div>
-
-              </div>
+              
               <!-- /Search -->
 
               <ul class="navbar-nav flex-row align-items-center ms-auto">
@@ -321,15 +307,20 @@
 
             <div class="container-fluid flex-grow-1 container-p-y">
               <!-- Layout Demo -->
-              <div class="container card text-center mt-5">
+              <div class="container card text-center mt-4">
                 <div class="card-body">
-                    <h1 class="card-title">Hello there <span id="user_name" class="text-primary"></span></h1>
-                    <p class="card-text">Welcome to Nsnemo.</p>
-                    <p class="card-text">Click on the menu button to continue.</p>
-                    
+                    <h1 class="card-title">Welcome aboard <span id="user_name" class="text-primary"></span>!</h1>
+                    <p>Our app ensures seamless data management for you.</p>
+                    <div class="d-flex justify-content-center mt-3">
+                      <img src="../../public/assets/img/illustrations/undraw_login_re_4vu2.svg" style="width: 200px;height: auto;">
+                      
+                      </div>
+                      <p class="card-text mt-3">Welcome to Nsnemo.</p>
+                    <p class="card-text">Click on the menu button on the left to continue.</p>
                 </div>
+                
             </div>
-       
+            
           
           
             
