--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -445,10 +445,7 @@
                     <div data-i18n="Account">Manage</div>
                   </a>
                 </span>
-                <li class="menu-item">
-                  <a href="add-vendor.html" class="menu-link">
-                    <div data-i18n="Account">Add</div>
-                  </a>
+                
                 </span>
               </ul>
             </span>
@@ -824,7 +821,7 @@
 
                         </div>
                         <div class="d-flex justify-content-end mt-5 mb-3">
-                          <span  style="font-size: 12px;">NAUTILUS SHIPPING</span>
+                          <span  style="font-size: 12px;">Nautilus Shipping</span>
 
                       </div>
                     
