--- a/views/public/html/view-cd.html
+++ b/views/public/html/view-cd.html
@@ -230,21 +230,8 @@
 
             <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
               <!-- Search -->
-              <div class="navbar-nav align-items-center">
-
-                <div class="nav-item d-flex align-items-center">
-                  <button class="btn btn-light border-0 m-0 p-0 " id="search_btn"> <i class="bx bx-search fs-4 lh-0"></i></button>
-
-                  <input
-                    type="text"
-                    class="form-control border-0 shadow-none"
-                    placeholder="Search..."
-                    aria-label="Search..."
-                    id="search_input"
-                  />
-                </div>
-
-              </div>
+             
+              
               <!-- /Search -->
 
               <ul class="navbar-nav flex-row align-items-center ms-auto">
@@ -264,8 +251,8 @@
                    User -->
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
                   <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-                    <div class="avatar avatar-online">
-                      <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                    <div class="avatar avatar-online mt-3">
+                     <span class=" rounded-pill bg-primary text-white text-center p-3 ">C</span>
                     </div>
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
@@ -273,13 +260,13 @@
                       <a class="dropdown-item" href="#">
                         <div class="d-flex">
                           <div class="flex-shrink-0 me-3">
-                            <div class="avatar avatar-online">
-                              <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                            <div class="avatar avatar-online mt-3">
+                              <span class=" rounded-pill bg-primary text-white text-center p-3 ">C</span>
                             </div>
                           </div>
                           <div class="flex-grow-1">
                             <span class="fw-semibold d-block" id="user_name"></span>
-                            <small class="text-muted">Admin</small>
+                            <small class="text-muted">Candidate</small>
                           </div>
                         </div>
                       </a>
@@ -321,15 +308,16 @@
                     <div class="content-wrapper  rounded-3">
                         <div class="w-100 mt-3">
                             <div class="container">
-                                <h1 class="text-center">My Details</h1>
+                                <h1 class="text-center text-dark">My Details</h1>
                                 <div id="pagination-controls"></div>
             
                                 
                                 <div class="container mt-4">
                                     <!-- Candidate Information Card -->
                                     <div class="card">
-                                        <div class="card-header">
-                                            Candidate Information
+                                        <div class="card-header bg-warning m-5 rounded-pill p-0 pt-3">
+                                            <h4 class="text-center text-white">Candidate Information</h4>
+
                                         </div>
                                         <div class="card-body">
                                             <div class="row">
@@ -418,7 +406,7 @@
                                 
                                     <!-- Address Information Card -->
                                     <div class="card mt-4">
-                                        <div class="card-header">
+                                        <div class="card-header text-dark fw-bold">
                                            Primary Address Information
                                         </div>
                                         <div class="card-body">
@@ -457,8 +445,8 @@
                                              
                                                 <hr class="mt-3"/>
 
-                                                <div class=" mb-4">
-                                                    Alternate Address Information
+                                                <div class="card-header text-dark fw-bold">
+                                                  Alternate Address Information
                                                  </div>
                                                 <div class="col-md-4">
                                                     <label for="address2">Address 2</label>
