--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -793,7 +793,7 @@
                                 
                             </div>  
                             <div class="card p-5 pb-0 mt-3 w-100">
-                              <h6 class="fw-bolder ">Total available candidates</h6>
+                              <h6 class="fw-bolder ">Total available nemo candidates</h6>
                             <div id="rankCharts" ></div>
                             </div>
                             
@@ -807,7 +807,7 @@
   <div class="row">
     <div class="col">
     
-          <h4 class="card-title pb-0 mb-0" >Discussion Counts</h4>
+          <h4 class="card-title " >Discussion Counts</h4>
           <p class="text-primary text-end" style="font-size: 10px;margin-top: 0px;padding-top: 0px;">Hover over the Bars to display more details</p>
           <ul id="discussionCounts" class="list-group">
             <!-- Quarter data will be populated here -->
