--- a/views/public/html/queries.html
+++ b/views/public/html/queries.html
@@ -568,9 +568,9 @@
       </table>
     </div>
 
-    <div class=" border border-secondary d-flex justify-content-between">
-      <div class="p-5 col-md-6" style="background-color: #f8f9fa; border-radius: 10px;">
-        <h2 style="color: #007bff;">Add Query</h2>
+    <div class=" border border-secondary border-1  d-flex justify-content-between">
+      <div class="p-5 col-md-6" style="background-color: rgb(255, 255, 255); border-radius: 0px 10px 10px 0px;">
+        <h2 style="color: rgb(0, 0, 0);">Add Query</h2>
         <form id="add-query-form">
           <div class="mb-3">
             <label for="categories" class="form-label">Select categories</label>
@@ -592,8 +592,8 @@
         </form>
       </div>
 
-      <div id="edit-query-section" class="p-5  col-md-6" style="display: none; background-color: #f8f9fa; border-radius: 10px;">
-        <h2 style="color: #007bff;">Edit Query</h2>
+      <div id="edit-query-section" class="p-5  col-md-6" style="display: none; background-color: #89ABE3FF; border-radius: 10px 0px 0px 10px;">
+        <h2 style="color: rgb(255, 255, 255);">Edit Query</h2>
         <form id="edit-query-form">
           <div class="mb-3">
             <label for="edit_categories" class="form-label">Select categories</label>
